--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(39, 39, 39);
+    background-color: rgb(39, 39, 39)!important;
     margin-left: 83px;
 }
 
@@ -7,6 +7,24 @@ a{
 	text-decoration: none !important;
 }
 
+.bg-red{
+    background-color:rgb(189, 30, 30);
+}
+
+.btn-red{
+    --bs-btn-color: #fff !important;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: rgb(175, 27, 27) ;
+    --bs-btn-hover-border-color: rgb(175, 27, 27);
+    --bs-btn-focus-shadow-rgb: 130, 138, 145;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: rgb(175, 27, 27);
+    --bs-btn-active-border-color:rgb(175, 27, 27);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #6c757d;
+    --bs-btn-disabled-border-color: #6c757d;
+}
 
 .lebih_banyak{
     text-align: right;
@@ -192,6 +210,14 @@ a{
     margin-bottom: 7px;
 }
 
+.regis_login_{
+    background-color: #ffffff;
+    width: 170px;
+    height: 30px;
+    margin:auto;
+    position: static;  
+}
+
 .regis_login{
     background-color: #ffffff;
     border: 2px solid transparent;
@@ -220,6 +246,12 @@ a{
 #login.sidebar_teks-link-regis{
     color: #bd1e1e !important;
 }
+
+#login1.sidebar_teks-link-regis{
+    color: #bd1e1e !important;
+    top: 0px !important;
+}
+
 /*wibu.com*/
 .logo{
     width: 600px;
@@ -229,9 +261,9 @@ a{
     margin-bottom: 20px;    
 }
 /*Rekomendasi*/
-
 .rekomendasi_layout{
     height: auto;
+    
 }
 
 .rekomendasi{
@@ -263,10 +295,11 @@ a{
     font-size: 30px;
 }
 /*kontainer*/
+
 .container_thread-populer{
     display: flex;
     height: auto;
-    margin: auto;
+    justify-content: center;
 }
 
 /*popular*/
@@ -284,7 +317,7 @@ a{
 .populer_layout{
     width: 970px;
     height: auto;
-    margin-left: 30px;
+    margin-left: 4%;
     display: grid;
 }
 
@@ -357,7 +390,7 @@ a{
 /*thread*/
 .thread_layout{
     background-color: #ffffff;
-    margin: auto;
+    margin-left: 4% ;
     width: 330px;
     height: auto;
     display: block;
@@ -392,6 +425,11 @@ a{
     background: #f3f3f3;
     box-shadow: 0 1px 3px -1px rgba(0, 0, 0, 0.4);
 }
+
+.thread-content:hover{
+    background: #eeebeb !important;
+}
+
 .thread-content{
     margin: auto;
     display: grid;
@@ -608,7 +646,7 @@ a{
 
 .popular_bar{
     background-color: #bd1e1e;
-    height: 30px;
+    height: 38px;
 }
 
 .popular_bawah{
@@ -655,8 +693,9 @@ a{
 .karakter_foto-content{
     margin: auto;
     background-color: #808080;
-    width: 170px;
-    height: 170px;
+    width: 174px;
+    height: 174px;
+    border: 2px solid #2b2b2b ;
 }
 
 .karakter_foto-nama{
@@ -667,8 +706,9 @@ a{
 .anime_foto-content{
     margin: auto;
     background-color: #808080;
-    width: 230px;
-    height: 134px;
+    border: 2px solid #2b2b2b;
+    width: 233px;
+    height: 137px;
 }
 
 .anime_foto-nama, .karakter_foto-asal{
