--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -13,6 +13,7 @@ a{
 
 .btn-red{
     --bs-btn-color: #fff !important;
+    --bs-btn-bg:rgb(189, 30, 30)!important;
     --bs-btn-hover-color: #fff;
     --bs-btn-hover-bg: rgb(175, 27, 27) ;
     --bs-btn-hover-border-color: rgb(175, 27, 27);
@@ -24,6 +25,11 @@ a{
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: #6c757d;
     --bs-btn-disabled-border-color: #6c757d;
+}
+
+.Wh-1{
+    width: 100PX;
+    height: 50px;
 }
 
 .lebih_banyak{
@@ -190,6 +196,13 @@ a{
 
 }
 
+.daftar-teks{
+    font-family: 'inter' ;
+    padding: 10px;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 1000;
+}
 .regis_daftar{
     background-color: #bd1e1e;
     border: 2px solid transparent;
@@ -250,6 +263,16 @@ a{
 #login1.sidebar_teks-link-regis{
     color: #bd1e1e !important;
     top: 0px !important;
+}
+
+#submit-auth{
+    width: 300px;
+    height: 40px;
+    border-radius: 10px;
+}
+
+.form-registtration{
+    text-align: center;
 }
 
 /*wibu.com*/
@@ -384,7 +407,7 @@ a{
     text-align: center;
     color: #eeeeee;
     font-size: 24px;
-    margin-right: 630px;
+    margin-right: 605px;
 }
 
 /*thread*/
@@ -392,7 +415,7 @@ a{
     background-color: #ffffff;
     margin-left: 4% ;
     width: 330px;
-    height: auto;
+    height: 800px;
     display: block;
 }
 
@@ -410,8 +433,7 @@ a{
 }
 
 .thread_bawah{
-    margin-top: 10px;
-    margin-bottom: 10px;
+    padding: 15px;
     background-color: #ffffff;
     display: grid;
     height: auto;
@@ -419,7 +441,7 @@ a{
 
 .thread{
     margin: auto;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 .thread-content-container{
     background: #f3f3f3;
@@ -821,8 +843,10 @@ a{
 }
 
 .akun{
+    padding-top: 30px;
     margin: auto;
     overflow: hidden;
+    text-align: center;
 }
 
 .akun-teks {
@@ -856,34 +880,43 @@ input{
 .input_akun p{
     text-align: center;
 }
+
+.thread-page{
+    width: 904px;
+}
+.thread-list_layout{
+    position: relative;
+    margin-left: 4%;
+}
 .thread-body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-    width: 924px;
-    height: 190px;
+    background-color: #ffffff;
+    min-height: 190px;
 }
 
 .thread-header {
     background-color: #ffffff;
-    padding: 10px;
     width: 904px;
     height: 138px;
     border-bottom: 1px solid #cccccc;
 }
 
 .thread-h1 {
+    padding: 10px;
     margin: 0;
     font-size: 24px;
 }
 
 .thread-article {
+    padding: 10px;
     margin: 0;
     font-size: 24px;
 }
 
 .thread-article2 {
     margin: 0;
-    font-size: 24px;
+    font-size: 18px;
+    padding: 10px;
     border-bottom: 1px solid #cccccc;
 }
 
@@ -914,9 +947,8 @@ input{
 
 .thread-balasan {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-    width: 166px;
-    height: 66px;
+    width: 904px;
+    height: auto;
 }
 
 .thread-komen input[type="text"] {
@@ -932,7 +964,7 @@ input{
 }
 
 .comment-box input[type="text"] {
-    width: 1271px;
+    width: 904px;
     height: 315px;
     padding: 10px;
     box-sizing: border-box;
@@ -946,7 +978,7 @@ input{
 #comment-box1 {
     background-color: #f7f7f7;
     position: relative;
-    width: 1271px;
+    width: 904px;
     height: 315px;
     padding: 20px;
     color: rgb(0, 0, 0);
@@ -1100,6 +1132,8 @@ input{
 }
 
 .thread_layout-page {
+    padding: 30px;
+    background-color: #2c2b2b;
     display: flex;
 }
 .custom-input {
@@ -1107,3 +1141,10 @@ input{
     height: 103px;
     font-size: 32px;
   }
+
+.form-control-costum{
+    background-color: #ffffff !important;
+    border-radius: 0px !important;
+    border: 0px solid #ced4da !important;
+    border-bottom: 1px solid #ced4da !important;
+}
