--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1183,3 +1183,26 @@ input{
     height: 500px;
 }
 
+
+.search-container {
+    display: flex ;
+    justify-content: center;
+    position: relative;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    min-width: 85%;
+    height: 53px;
+}
+
+.search-container input[type="text"] {
+    position: center;
+    float: center;
+    width: 800px;
+    height: 45px;
+    border-radius: 40px;
+    border-color: #989898;
+    background-color: #ffffff;
+    right: 0;
+    text-indent: 5px;
+    opacity: 0.8;
+}
